@@ -22,11 +22,21 @@ Changes since SG 1.0-20081231
 	cg_farclip to turn on/off this feature (default: on), cg_farclip_value to scale it up (default: 1, value lesser than 1
 	are ignored - for cheat protection), and cg_farclip_zoomvalue for the sharp's zoom mode (default: 3, again: value 
 	lesser than 1 are ignored)
+- new g_roundNoMoveTime cvar, in seconds, to force players to not move at round beginning, only buying is possible during that time
+- new TK handling cvars g_maxteamkills,g_teamkillsforgettime and g_teamkillschecktime when g_friendlyFire is set:
+ - g_maxteamkills, set to 0 disable max TK checks, otherwise defines the maximum number of supported TK by a player
+ - g_teamkillsforgettime, in seconds, defines the time after which TK count will be reset to 0 for the player
+ - g_teamkillschecktime, in seconds, defines the time during which TK will be checked at only round beginning
+- new renderer cvar to activate OpenGL texture MultiSampling: r_ext_multisample. You really need a good video card to use it.
+ - Thanks to ioQuake3 team for r_ext_multisample cvar
 *** CHANGES ***
 - Reloading bug fixed by Joe Kari
 - Fix game crash during game load when using cgame binary library
 - Fix server not hitting time limit when only bots are playing (thanks to ioQ3 code engine)
 - Fix cinematic rendering with wide screens (thanks to ioQ3 code engine), intro is now visible in wide screen mode
+- Fix little freeze/lag in dm_train
+- Fix invisible "entity 0" bug near movers entities we can trigger
+- Many fixes from ioQuake3 sources
 
 Changes in SG 1.0-20081231
 ******************
